--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 primaryColor="#373f51"
-backgroundColor="#f9eeee"
+backgroundColor="#fFffff"
 secondaryBackgroundColor="#c9d3f7"
 textColor="#373f51"
